syntax = "proto3";
package recipe;
service RecipeService {
    rpc GetRecipe(RecipeRequest) returns (Recipe) {}
    rpc GetMetaData(Empty) returns (Meta) {}
}
message Recipe {
    int32 id = 1;
    string name = 2;
    string steps = 3;
    repeated Ingredient ingredients = 4;
}
message Ingredient {
    int32 id = 1;
    string name = 2;
    string quantity = 3;
}
message RecipeRequest {
    int32 id = 1;
}
message Meta {
    int32 pid = 2;
}
message Empty {}